# ball-bounce-sim

./: .gitignore  BallBounceSimWriteUp.pages  Makefile  README.md  ai_collaboration_note.pages  config.py  config.yaml  controller_module.py  dynamics_module.py  main.py  output_module.py  pyproject.toml  run_scenarios.py  setup.py  solver_module.py  visualizer_module.py
.github/workflows/: ci.yml
controller/: CMakeLists.txt  README.md  controller  controller.cpp  controller.dylib  controller.h  controller_smoke_test.cpp
scenarios/a_fixed_reasonable/: config.yaml
scenarios/b_fixed_degraded/: config.yaml
scenarios/c_variable_tight/: config.yaml
scenarios/d_variable_loose/: config.yaml
tests/: baseline.json  conftest.py  generate_baseline.py  smoke_config.yaml  test_performance.py  test_unit.py
